--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
-    <link rel="stylesheet" href="http://localhost:30244/css" type="text/css">
+    <link rel="stylesheet" href="http://flip3.engr.oregonstate.edu:32044/" type="text/css">
   </head>
 <body>
-  <a id="banner" style="color:#ff0000; text-decoration:none"  href="http://localhost:30244/"><div class = "banner" style="text-align:center">Scott's Personal Page</div></a>
+  <a id="banner" style="color:#ff0000; text-decoration:none"  href="http://flip3.engr.oregonstate.edu:32044/"><div class = "banner" style="text-align:center">Scott's Personal Page</div></a>
   <ul class = "menu">
-    <li class = "navi"><a id = "home" class = "naviLink" href="http://localhost:30244/">Home</a></li>
-    <li class = "navi"><a id = "about"class = "naviLink" href="http://localhost:30244/aboutme">About</a></li>
-    <li class = "navi"><a id = "contact" class = "naviLink" href="http://localhost:30244/contact">Contact</a></li>
-    <li class = "navi"><a id = "blog" class = "naviLink" href="http://localhost:30244/blog">Blog</a></li>
+    <li class = "navi"><a id = "home" class = "naviLink" href="http://flip3.engr.oregonstate.edu:32044/">Home</a></li>
+    <li class = "navi"><a id = "about"class = "naviLink" href="http://flip3.engr.oregonstate.edu:32044/">About</a></li>
+    <li class = "navi"><a id = "contact" class = "naviLink" href="http://flip3.engr.oregonstate.edu:32044/">Contact</a></li>
+    <li class = "navi"><a id = "blog" class = "naviLink" href="http://flip3.engr.oregonstate.edu:32044/">Blog</a></li>
   </ul>
 
-  <script type="text/javascript" src="http://localhost:30244/naviscript"></script>
+  <script type="text/javascript" src="http://flip3.engr.oregonstate.edu:32044/"></script>
 
 	{{{body}}}
 
