--- a/views/writeBlog.handlebars
+++ b/views/writeBlog.handlebars
@@ -22,4 +22,4 @@
       </fieldset>
       </form>
 </div>
-<script type="text/javascript" src="http://localhost:30244/blogscript"></script>
+<script type="text/javascript" src="http://flip3.engr.oregonstate.edu:32044/blogscript"></script>
