--- a/views/aboutme.handlebars
+++ b/views/aboutme.handlebars
@@ -49,19 +49,19 @@
             <ul class = "projects">
                 <li> Bullet game
                   <div id="bulletGame" class="project">
-                    <div class="fakeimg"><img class="aboutImg" src="http://flip3.engr.oregonstate.edu:32044/images/1"></div>
+                    <div class="fakeimg"><img class="aboutImg" src="images/1"></div>
                   </div>
                 </li>
                 <br>
                 <li> Board game
                   <div id="boardGame" class="project">
-                    <div class="fakeimg"><img class="aboutImg" src="http://flip3.engr.oregonstate.edu:32044/images/2"></div>
+                    <div class="fakeimg"><img class="aboutImg" src="images/2"></div>
                   </div>
                 </li>
                 <br>
                 <li> This website!
                   <div id="website" class="project">
-                    <div class="fakeimg"><img class="aboutImg" src="http://flip3.engr.oregonstate.edu:32044/images/3"></div>
+                    <div class="fakeimg"><img class="aboutImg" src="images/3"></div>
                   </div>
                 </li>
             </ul>
@@ -78,16 +78,16 @@
             </ul>
           </div>
           <div class="card">
-            <div class="fakeimg"><img class="aboutImg" src="http://flip3.engr.oregonstate.edu:32044/images/5"></div>
+            <div class="fakeimg"><img class="aboutImg" src="images/5"></div>
           </div>
         </div>
         <div class="rightcolumn">
           <div class="card">
             <h2>Resume</h2>
-            <p><a style="color:#b5656d; text-decoration:underline;" href=http://flip3.engr.oregonstate.edu:32044/downloadresume>Click here to download</a></p>
+            <p><a style="color:#b5656d; text-decoration:underline;" href=downloadresume>Click here to download</a></p>
           </div>
           <div class="card">
-            <img class="aboutImg" src="http://flip3.engr.oregonstate.edu:32044/images/4"><br>
+            <img class="aboutImg" src="images/4"><br>
           </div>
         </div>
       </div>
@@ -95,4 +95,4 @@
   </div>
 </div>
 
-<script type="text/javascript" src="http://flip3.engr.oregonstate.edu:32044/showscript"></script>
+<script type="text/javascript" src="showscript"></script>
