--- a/views/password.handlebars
+++ b/views/password.handlebars
@@ -15,4 +15,4 @@
 </div>
 
 
-<script type="text/javascript" src="http://flip3.engr.oregonstate.edu:32044/blogscript"></script>
+<script type="text/javascript" src="blogscript"></script>
