--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -55,4 +55,4 @@
     </div>
 </div>
 
- <script type="text/javascript" src="http://flip3.engr.oregonstate.edu:32044/commentscript"></script>
+ <script type="text/javascript" src="commentscript"></script>
