--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css" type="text/css">
   </head>
 <body>
-  <a id="banner" style="color:#ff0000; text-decoration:none"  href="home"><div class = "banner" style="text-align:center">Scott's Personal Page</div></a>
+  <a id="banner" style="color:#ff0000; text-decoration:none"  href="/"><div class = "banner" style="text-align:center">Scott's Personal Page</div></a>
   <ul class = "menu">
     <li class = "navi"><a id = "home" class = "naviLink" href="/">Home</a></li>
     <li class = "navi"><a id = "about"class = "naviLink" href="aboutme">About</a></li>
